<resources>
    <string name="app_name">Secret Services</string>
    <string name="userNameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="welcomeMessage">Agent Login</string>
    <string name="agentList">Agents List</string>
    <string name="agentSearch">Agent Search</string>
    <string name="agentAdd">Agent Add</string>
    <string name="MissionAdd">Add Mission</string>
</resources>
