<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/home_lnrAgentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/home_imgList"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:src="@drawable/img_list_icon"
            android:layout_weight="0.4"/>
        <TextView
            android:id="@+id/home_txtAgentList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agentList"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="0.6"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_lnrAgentSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/home_imgSearch"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:src="@drawable/img_search"
            android:layout_weight="0.4"/>
        <TextView
            android:id="@+id/home_txtAgentSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agentSearch"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="0.6"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_lnrAgentAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/home_imgAdd"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:src="@drawable/img_add"
            android:layout_weight="0.4"/>
        <TextView
            android:id="@+id/home_txtAgentAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agentAdd"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="0.6"/>
    </LinearLayout>
</LinearLayout>
