<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#ffffff">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="#ffffff">
    <ImageView
        android:id="@+id/login_imgLogo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/app_final_logo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="#b2b8c4"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <ImageView
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:src="@drawable/user"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/login_edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userNameHint"
                android:singleLine="true"
                android:maxLines="1"
                android:textColorHint="#b2b8c4"
                android:textColor="#474c54"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:paddingLeft="35dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/edittext_background"/>
        </RelativeLayout>
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <ImageView
                    android:layout_height="25dp"
                    android:layout_width="25dp"
                    android:src="@drawable/lock"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/login_edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColorHint="#b2b8c4"
                    android:textColor="#474c54"
                    android:textSize="20sp"
                    android:paddingLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp"
                    android:background="@drawable/edittext_background"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp">
            <Button
                android:id="@+id/login_btnLogin"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="0.5"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/login_button_background"/>
            <Button
                android:id="@+id/login_btnReset"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="0.5"
                android:text="Reset"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/login_button_background"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
<!--
</ScrollView>-->
